--- a/CleanTheTrees.Rmd
+++ b/CleanTheTrees.Rmd
@@ -8,7 +8,13 @@ This markdown document will walk through the calculation of importance values fr
 
 The test data set in this project comes from the 2017 Forest Ecology class.
 
-## Step 1. Pull in and review data.  Fix any errors
+## Step 1. Set up the workspace
+```{r}
+rm(list = ls())
+library(dplyr)
+```
+
+## Step 2. Pull in and review data.  Fix any errors
 
 ```{r}
 trees<-read.csv("trees.csv", sep = ",", stringsAsFactors = F)
@@ -54,6 +60,14 @@ And now get rid of the unknowns
 ```{r}
 trees<-filter(trees, Species != "unknown")
 ```
+Now omit dead trees
+```{r}
+dead_ones<-which(trees$Comments == "DEAD" | trees$Comments == "1/2 DEAD")
+
+trees<-trees[-dead_ones,]
+```
+
+
 Now save data
 ```{r}
 write.csv(trees, "cleanTrees.csv")
